Fix slider flicker on mouseover

--- a/image-slider/styles.css
+++ b/image-slider/styles.css
@@ -46,7 +46,7 @@ img {
     top: 0;
     left: 50%;
     transform: translate(-50%,0%);
-
+    pointer-events: none;
 }
 
 @media (max-width: 900px) {
